--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,9 @@
 body {
     background-color: rgb(255, 255, 255);
 }
+
+.news-image {
+    width: 100%;
+    height: auto;
+    max-width: 600px;
+}
